# trading_rustix

./: Cargo.toml  Dockerfile  build.rs  run.sh  run_prod.sh  traefik.yaml  traefik_dynamic.yaml
proto/: dataloader.proto
src/lib/: lib.rs
src/lib/envs/: mod.rs
src/lib/error/: mod.rs
src/lib/proto/: dataloader.rs  mod.rs
src/lib/time/: mod.rs
src/lib/trading/: mod.rs
