[package]
name = "rustix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4" }
actix-http = { version = "3.5", features = ["http2"] }
tokio = { version = "1.23", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1.0"
tonic = "0.8"
prost = "0.11"
chrono = "0.4"
futures = "0.3"
futures-util = "0.3"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
envmnt = "0.10.4"
serde_json = "1.0"
serde_repr = "0.1"
erased-serde = "0.3.25"
env_logger = "0.11.1"

[build-dependencies]
tonic-build = "0.8"

[lib]
name = "rustix"
path = "src/lib/lib.rs"

[[bin]]
name = "rustix_bin"
path = "src/bin/main.rs"
